// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`должен обогатить данные словарем опций 1`] = `
Array [
  Object {
    "category": "CARS",
    "deliveries": Object {},
    "id": "subscription-id",
    "params": Object {
      "catalog_equipment": Array [
        "automatic-lighting-control",
      ],
      "catalog_filter": Array [
        Object {
          "mark": "BMW",
          "model": "X6",
        },
      ],
      "rid": "2",
      "section": "new",
    },
    "paramsDescription": Object {
      "moreCount": 0,
      "paramsInfo": Array [
        Object {
          "key": "section",
          "val": "Новые",
        },
        Object {
          "key": "catalog_equipment",
          "label": undefined,
          "val": "название automatic-lighting-control",
        },
      ],
    },
    "title": "subscription-title",
    "url": "https://autoru_frontend.base_domain/sankt-peterburg/cars/bmw/x6/new/?catalog_equipment=automatic-lighting-control",
  },
]
`;

exports[`должен отдать подписки, если они есть 1`] = `
Array [
  Object {
    "category": "CARS",
    "deliveries": Object {},
    "id": "subscription-id",
    "params": Object {
      "catalog_filter": Array [
        Object {
          "mark": "BMW",
          "model": "X6",
        },
      ],
      "price_to": 1000000,
      "rid": "2",
      "section": "new",
    },
    "paramsDescription": Object {
      "moreCount": 0,
      "paramsInfo": Array [
        Object {
          "key": "section",
          "val": "Новые",
        },
        Object {
          "key": "price_to",
          "label": "Цена",
          "val": "до 1 000 000 ₽",
        },
      ],
    },
    "title": "subscription-title",
    "url": "https://autoru_frontend.base_domain/sankt-peterburg/cars/bmw/x6/new/?price_to=1000000",
  },
]
`;
